docs/versioned_docs/version-5.5/fragments/config-hooks.mdx
```yaml
hooks:                              # struct[]  | Array of hooks to be executed
- command: "./scripts/my-hook"      # string    | Command to be executed when this hook is triggered
  args: []                          # string[]  | Array of arguments for the command of this hook
  os: darwin                        # string    | If specified then this hook is only executed on the given operating system
  when:                             # struct    | Trigger for executing this hook 
    before:                         # struct    | Run hook before a certain execution step
      pullSecrets: "all"            # string    | "all" for running hook before creating image pull secrets
      dependencies: "all"           # string    | "all" for running hook before deploying dependencies
      images: "all"                 # string    | "all" for running hook before building the first image
      deployments: "all"            # string    | Name of the deployment you want to run this hook before deploying OR "all" for running hook before deploying the first deployment
    after:                          # struct    | Run hook after a certain execution step
      pullSecrets: "all"            # string    | "all" for running hook after creating image pull secrets
      dependencies: "all"           # string    | "all" for running hook after deploying dependencies
      images: "all"                 # string    | all" for running hook after building the last image
      deployments: "all"            # string    | Name of the deployment you want to run this hook after deploying OR "all" for running hook after deploying the last deployment
    onError:
      pullSecrets: "all"            # string    | "all" for running hook if an error occurs during creating image pull secrets
      dependencies: "all"           # string    | "all" for running hook if an error occurs during deploying dependencies
      images: "all"                 # string    | all" for running hook if an error occurs during building images
      deployments: "all"            # string    | Name of the deployment you want to run this hook if an error occurs during deploying OR "all" for running hook if an error occurs during deploying any deployment
```
